# symbolic-chess

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: chess_corpus.py  cpp_engine_self_play.py  cpp_engine_vs_stockfish.py  kpk_corpus.py  math_engine_vs_stockfish.py  run_chess_stockfish.py  run_kpk.py  run_pysr_chess_stockfish.py  run_pysr_kpk.py  run_pysr_self_play_iter1.py  run_self_play_iter1.py
benchmarks/results/: cpp_engine_vs_stockfish.md  math_engine_vs_stockfish.md  pysr_chess_stockfish.md  pysr_kpk.md  pysr_self_play_iter1.md
docs/: benchmark_stockfish_distillation.md  expression_layer_higher_order.md  kpk_equilibrium_distillation.md  math_engine_cpp_v0.md  play_human.md
math-engine-cpp/: .gitignore  CMakeLists.txt  LICENSE  README.md
math-engine-cpp/src/: ast.cpp  ast.h  eval.cpp  eval.h  eval_dyn.cpp  eval_dyn.h  features.cpp  features.h  main.cpp  search.cpp  search.h  tt.cpp  tt.h  uci.cpp  uci.h
math-engine-cpp/tests/: test_eval.cpp
src/symbolic_chess/: __init__.py
src/symbolic_chess/chess_engine/: __init__.py  search.py  self_play.py
src/symbolic_chess/expression_layer/: __init__.py  board.py  core.py  pysr_adapter.py  spatial.py  temporal_utils.py  tessera_adapter.py
src/symbolic_chess/play/: __main__.py  server.py  uci_bridge.py
src/symbolic_chess/play/templates/: board.html
src/symbolic_chess/strategy/: __init__.py  store.py  tree.py
src/symbolic_chess/symbolic_az/: __init__.py  mutation.py
strategies/: cx13_iter0.json  iter1_joint.json
tests/chess_engine/: test_search.py  test_self_play.py
tests/expression_layer/: test_board.py  test_compile.py  test_core.py  test_higher_order.py  test_tessera_adapter.py
tests/play/: test_dyn_eval_cross_check.py  test_strategy_store.py  test_uci_bridge.py
tests/strategy/: test_tree.py
tests/symbolic_az/: test_mutation.py
