[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-chess"
version = "0.1.0"
description = "Symbolic regression as a learner of chess strategy"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyarrow",
    "python-chess",
    "sympy",
    "scikit-learn",
]

[project.optional-dependencies]
pysr = ["pysr"]
dev = ["pytest", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
