[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-chess"
version = "0.1.0"
description = "Symbolic regression as a learner of chess strategy"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyarrow",
    "python-chess",
    "sympy",
    "scikit-learn",
    # Symbolic regression engine. Pinned by commit hash to preserve
    # reproducibility while tessera evolves rapidly during this port.
    # When tessera stabilises (or publishes to PyPI), this can become
    # a versioned dependency.
    "tessera @ git+https://github.com/davechendatascience/tessera.git@0937f67cd6c43e72d72b2640ec1238073bf4d6e3",
]

[project.optional-dependencies]
pysr = ["pysr"]
dev = ["pytest", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
